# VGG16_Optimization

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
Output/: Output1.txt  Output2.txt  Output3.txt  Output4.txt  Outputv2 - 1.txt  Outputv2 - Analysis.txt
include/: cuda_kernels.h  host_utils.h
scripts/: build.bat
src/: cuda_kernels.cu  host_utils.cpp  main.cpp
